Redesign and Create feature is added

--- a/popup/choose_page.html
+++ b/popup/choose_page.html
@@ -8,10 +8,14 @@
 </head>
 
 <body>
-    <div id="main">
+    <div id="top">
     </div>
-    <script src="get_live.js"></script>
-    <script src="choose_page.js"></script>
+    <div id="channels">
+    </div>
+    <div id="entry">
+    </div>
+    <script src="elems.js"></script>
+    <script src="events.js"></script>
 </body>
 
 </html>
