--- a/popup/choose_page.html
+++ b/popup/choose_page.html
@@ -10,7 +10,7 @@
 <body>
     <div id="top">
     </div>
-    <div id="channels">
+    <div id="channels" class="channel_list">
     </div>
     <div id="entry">
     </div>
